--- a/NUEVO PROYECTO/index.html
+++ b/NUEVO PROYECTO/index.html
@@ -1,9 +1,15 @@
-<<<<<<< HEAD
-HOLA AMIGOS FUNCIONO
+/*HTML*/
 
+body{
 
-=======
-123456789
-qwertyuioppoiuytre
->>>>>>> be207e32896bd4ed5a8003ebcc38e3d1337af921
-hdvhsvfhadghfgahfha
+}
+
+header{
+
+}
+footer{
+    
+}
+
+/*class*/
+/* header*/
