--- a/NUEVO PROYECTO/index.html
+++ b/NUEVO PROYECTO/index.html
@@ -1,15 +1,26 @@
-/*HTML*/
+<!DOCTYPE html>
+<html lang="en">
 
-body{
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Concurso Fotografia</title>
+    <link rel="stylesheet" href="./CSS/style.css">
+</head>
 
-}
+<body>
+    <!--HEADER -->
 
-header{
+    <!--ABOUT-->
 
-}
-footer{
-    
-}
+    <!--IMAGEN1-->
 
-/*class*/
-/* header*/
+    <!--FOOTER-->
+
+    <!--javascript-->
+
+
+
+</body>
+
+</html>
