--- a/NUEVO PROYECTO/index.html
+++ b/NUEVO PROYECTO/index.html
@@ -25,130 +25,80 @@
             <ul class="top-nav">
                 <span class="mob-close fas fa-window-close" onclick="closeMobileMenu()"></span>
 
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Explora</li>
+                <li class="top-nav-item"><a class="top-nav-link" href="#">Explora</a></li>
                 <li class="top-nav-item"><a class="top-nav-link" href="#">Favoritas</a></li>
 
             </ul>
         </nav>
         <section class="intro-section">
-            <h1 class="intro-title">Las mejores fotografías tomadas por artistas talentosos</h1>
-            <a class="download-btn" href="#"><i></i><span class="btn-label">Busca Fotos o
-                    Fotografos</span></a>
-            <!--<button onclick="change();">Change this text</button>-->
-            <ul class="top-nav">
-                <span class="mob-close fas fa-window-close" onclick="closeMobileMenu()"></span>
+            <div class="contenedor">
+                <h1 class="intro-title">Las mejores fotografías tomadas por artistas talentosos</h1>
+                <a class="download-btn" href="#"><i></i><span class="btn-label">Busca Fotos o
+                        Fotografos</span></a>
+               
 
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Todo</li>
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Aerea</a></li>
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Naturaleza</li>
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Paisajes</a></li>
-                <li class="top-nav-item"><a class="top-nav-link" href="#">Personas</li>
 
 
         </section>
     </header>
     <!-- header -->
+    <!-- Barra tipo foto-->
+    <div class="barra2">
+        <span class="mob-close" onclick="closeMobileMenu()"></span>
 
+        <li class="top-nav-item"><a class="top-nav-link" href="#">Todo</a></li>
+        <li class="top-nav-item"><a class="top-nav-link" href="#">Aerea</a></li>
+        <li class="top-nav-item"><a class="top-nav-link" href="#">Naturaleza</a></li>
+        <li class="top-nav-item"><a class="top-nav-link" href="#">Paisajes</a></li>
+        <li class="top-nav-item"><a class="top-nav-link" href="#">Personas</a></li>
+
+
+    </div>
     <!-- about -->
     <section class="about-section">
         <div class="contenedor">
-        <p class="secondary-title ">Sube las mejores fotos de tu stock y compartelo a talentosos creadores,</p>
-        <div class="row">
-            <input class="submit-btn download-btn " type="submit" value="INICIAR SECCION">
-        </div>
-        <div class="row">
-            <input class="submit-btn download-btn" type="submit" value="REGISTRARSE">
-        </div>
+            <p class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
+                creadores,</p>
+            <div>
+                <a class="download-btn" href="loginvista.html"><i></i><span class="btn-label">INICIAR SECCION</span></a>
+                <br>
+                <a class="download-btn" href="loginvista.html"><i></i><span class="btn-label">REGISTRARSE</span></a>
+            </div>
 
     </section>
     <!-- about -->
+    <div class="barra2">
 
+    </div>
     <!-- quote  -->
     <section class="quote-section">
-        <h2 class="secondary-title">Publicar Foto</h2>
-        <!-- icon -->
-        <span class="fa-stack fa-2x">
-        
-            <i class="fas fa-photo-video"></i>
-
-        </span>
-        <form class="datos" action="">
-            <div class="contenedor">
-                <div>
-                    <input class="submit-btn download-btn" type="submit" value="Añade tu foto">
-                </div>
-
-                <div class="input-contenedor">
-                    <input  type="text" placeholder="Titulo de la foto">
-                </div>
-                <div class="input-contenedor">
-                    <input type="text" placeholder="Descripción">
-                </div>
-
-                <div class="input-contenedor">
-                    <input type="text" placeholder="Categoria">
-                </div>
-
+        <h2 class="secondary-title quote-text2">Publicar Foto</h2>
+        <div class="contenedor">
+            <div class="input-contenedor">
+                <span class=" fa-4x">
+                    <i class="fas fa-photo-video"></i>
+                </span>
+                <p class=" publica-text">suba su foto de tu galeria aqui</p>
+                <input class="submit-btn download-btn " type="submit" value="Añade tu foto">
+                <br>
             </div>
 
+            <div>
+                <form class="formulario ">
+                    <input class="forpub" placeholder="Titulo de la foto">
+                    <br>
+                    <br>
+                    <input class="forpub" placeholder="Descripción">
+                    <br>
+                    <br>
+                    <input class="forpub" placeholder="Categoria">
+                </form>
+            </div>
+        </div>
     </section>
     <!-- quote  -->
 
-    <!-- contact -->
-    <section class="contact-section">
 
-
-
-        <form class="formulario">
-
-            <h2>Login</h2>
-            <div class="contenedor">
-
-                <div class="input-contenedor">
-                    <i class="fas fa-envelope icon"></i>
-                    <input type="text" placeholder="Correo Electronico">
-
-                </div>
-
-                <div class="input-contenedor">
-                    <i class="fas fa-key icon"></i>
-                    <input type="password" placeholder="Contraseña">
-
-                </div>
-                <input type="submit" value="Login" class="button">
-                <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
-                <p>¿No tienes una cuenta? <a class="link" href="#">Registrate </a></p>
-            </div>
-        </form>
-        <form class="formulario">
-
-            <h1>Registrate</h1>
-            <div class="contenedor">
-
-                <div class="input-contenedor">
-                    <i class="fas fa-user icon"></i>
-                    <input type="text" placeholder="Nombre Completo">
-
-                </div>
-
-                <div class="input-contenedor">
-                    <i class="fas fa-envelope icon"></i>
-                    <input type="text" placeholder="Correo Electronico">
-
-                </div>
-
-                <div class="input-contenedor">
-                    <i class="fas fa-key icon"></i>
-                    <input type="password" placeholder="Contraseña">
-
-                </div>
-                <input type="submit" value="Registrate" class="button">
-                <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
-                <p>¿Ya tienes una cuenta?<a class="link" href="">Iniciar Sesion</a></p>
-            </div>
-        </form>
-    </section>
-    <!-- contact -->
 
     <!-- footer -->
     <footer>
