--- a/avance/IndexGaleria.html
+++ b/avance/IndexGaleria.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/styleGaleria.css">
     <script src="https://kit.fontawesome.com/3b1ae9d2f5.js" crossorigin="anonymous"></script>
     <title>Galeria</title>
 </head>
@@ -51,15 +51,15 @@
         <div class="searchSeparator"></div>
     </Section>
     <section class="galery">
-        <div class="Con"><img src="images/WomanFace.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/MountainLandscape.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/cityLandscape.jpeg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/City.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images//WomanEye.jpeg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/lake.jpg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images/pexels-francesca-zama-5339066.jpg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images//pexels-paul-ijsendoorn-33041.jpg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images/pexels-photo-2347011.jpeg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images/pexels-benjamin-suter-3617457.jpg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images/woman-girl-eye-models-39819.jpeg" class="imgGal" alt=""></div>
+        <div class="Con"><img src="images/pexels-pixabay-462162.jpg" class="imgGal" alt=""></div>
         
     </section>
-    <script src="main.js"></script>
+    <script src="JS/mainGaleria.js"></script>
 </body>
 
 </html>
