--- a/avance/IndexLogin.html
+++ b/avance/IndexLogin.html
@@ -5,7 +5,7 @@
 	<title></title> 
 	<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=1.0">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" >
-	<link rel="stylesheet" href="./css/registerlogin.css">
+	<link rel="stylesheet" href="./css/styleRegisterLogin.css">
 	
 
 </head>  
@@ -30,8 +30,8 @@
          </div>
          <input type="submit" value="Login" class="button">
          <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
-         <p>¿No tienes una cuenta? <a class="link" href="registrarvista.html">Registrate </a></p>
-         <p>Regresar <a class="link" href="index.html">Página Principal </a></p>
+         <p>¿No tienes una cuenta? <a class="link" href="Indexregistro.html">Registrate </a></p>
+         <p>Regresar <a class="link" href="indexMainMenu.html">Página Principal </a></p>
      </div>
     </form>
 </body>
