--- a/avance/indexMainMenu.html
+++ b/avance/indexMainMenu.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styleMainMenu.css">
     <title>Concurso Fotografico</title>
 </head>
 
@@ -60,9 +60,9 @@
             <p class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
                 creadores,</p>
             <div>
-                <a class="download-btn" href="loginvista.html"><i></i><span class="btn-label">INICIAR SECCION</span></a>
+                <a class="download-btn" href="IndexLogin.html"><i></i><span class="btn-label">INICIAR SECCION</span></a>
                 <br>
-                <a class="download-btn" href="loginvista.html"><i></i><span class="btn-label">REGISTRARSE</span></a>
+                <a class="download-btn" href="Indexregistro.html"><i></i><span class="btn-label">REGISTRARSE</span></a>
             </div>
 
     </section>
