--- a/avance/IndexAdmin.html
+++ b/avance/IndexAdmin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/styleAdmin.css">
     <script src="https://kit.fontawesome.com/3b1ae9d2f5.js" crossorigin="anonymous"></script>
     <title>Admin</title>
 </head>
@@ -28,8 +28,8 @@
         <div class="images">
             <h2 class="imgText">Fotos por revisar</h2>
             <div class="imgGal">
-                <img class="img" src="images/City.jpg" alt="">
-                <img class="img" src="images/lake.jpg" alt=""> 
+                <img class="img" src="images/pexels-benjamin-suter-3617457.jpg" alt="">
+                <img class="img" src="images/pexels-photo-3957582.jpeg" alt=""> 
             </div>
         </div>
         <div class="participants">
