--- a/avance/IndexPerfil.html
+++ b/avance/IndexPerfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./CSS/stylePerfil.css">
     <title>Pagina Wep</title>
 </head>
 
@@ -15,7 +15,7 @@
     <!-- header -->
     <header>
         <nav class="top-bar">
-            <a class="logo" href="#">
+            <a class="logo" href="#"></a>
                 <img class="logo" src="./images/logo.png" alt="Logo" style="height: 100px;width: 148px;margin: -11mm;">
             </a>
 
