Agregar Requerimientos de campos
se agrego requerimiento de campo de iniciar sesion y registrarse, y una pequeña animacion en el titulo

--- a/FrontEnd/IndexGaleria.html
+++ b/FrontEnd/IndexGaleria.html
@@ -38,7 +38,7 @@
             </ul>
         </Section>
 
-        <div class="title" data-aos="fade-right">
+        <div class="title" data-aos="zoom-in-right">
             <h1>Las Mejores Fotografias Tomandas Por Artistas Talentosos</h1>
         </div>
 
