--- a/FrontEnd/indexMainMenu.html
+++ b/FrontEnd/indexMainMenu.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="./css/styleMainMenu.css">
     <title>Concurso Fotografico</title>
 </head>
@@ -32,7 +33,7 @@
         </nav>
         <section class="intro-section">
             <div class="contenedor">
-                <h1 class="intro-title">Las mejores fotografías tomadas por artistas talentosos</h1>
+                <h1 data-aos="zoom-in" class="intro-title">Las mejores fotografías tomadas por artistas talentosos</h1>
                 <a class="download-btn" href="#"><i></i><span class="btn-label">Busca Fotos o
                         Fotografos</span></a>
                
@@ -57,7 +58,7 @@
     <!-- about -->
     <section class="about-section">
         <div class="contenedor">
-            <p class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
+            <p data-aos="zoom-in-down" class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
                 creadores,</p>
             <div>
                 <a class="download-btn" href="IndexLogin.html"><i></i><span class="btn-label">INICIAR SECCION</span></a>
@@ -72,13 +73,14 @@
     </div>
     <!-- quote  -->
     <section class="quote-section">
-        <h2 class="secondary-title quote-text2">Publicar Foto</h2>
+        <h2 data-aos="zoom-in" class="secondary-title quote-text2">Publicar Foto</h2>
         <div class="contenedor">
             <div class="input-contenedor">
                 <span class=" fa-4x">
                     <i class="fas fa-photo-video"></i>
                 </span>
-                <p class=" publica-text">suba su foto de tu galeria aqui</p>
+                <p data-aos="fade-up"
+                data-aos-duration="1000" class=" publica-text">suba su foto de tu galeria aqui</p>
                 <input class="submit-btn download-btn " type="submit" value="Añade tu foto">
                 <br>
             </div>
@@ -116,7 +118,7 @@
     </footer>
     <!-- footer -->
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/main.js"></script>
 
 </body>
