--- a/FrontEnd/IndexAdmin.html
+++ b/FrontEnd/IndexAdmin.html
@@ -51,6 +51,14 @@
                     <img class="listItem profilePar" src="images/pexels-daria-shevtsova-1071162.jpg" alt="">
                     <h3 class="listItem">Daria Shevtsova</h3>
                 </li>
+                <li class="listPar">
+                    <img class="listItem profilePar" src="images/pexels-daria-shevtsova-1071162.jpg" alt="">
+                    <h3 class="listItem">Daria Shevtsova</h3>
+                </li>
+                <li class="listPar">
+                    <img class="listItem profilePar" src="images/pexels-daria-shevtsova-1071162.jpg" alt="">
+                    <h3 class="listItem">Daria Shevtsova</h3>
+                </li>
             </ul>
             
         </div>
