--- a/FrontEnd/IndexPerfil.html
+++ b/FrontEnd/IndexPerfil.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="./CSS/stylePerfil.css">
-    <title>Pagina Wep</title>
+    <title>Pagina Web</title>
 </head>
 
 <body>
