--- a/FrontEnd/IndexGaleria.html
+++ b/FrontEnd/IndexGaleria.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="CSS/styleGaleria.css">
     <script src="https://kit.fontawesome.com/3b1ae9d2f5.js" crossorigin="anonymous"></script>
     <title>Galeria</title>
@@ -39,8 +38,7 @@
                 </li>
             </ul>
         </Section>
-
-        <div class="title" data-aos="zoom-in-right">
+        <div class="title">
             <h1>Las Mejores Fotografias Tomandas Por Artistas Talentosos</h1>
         </div>
 
@@ -51,7 +49,7 @@
         </div>
     </header>
     <Section class="search">
-        <h2 class="searchTerm" data-aos="flip-left">Naturaleza</h2>
+        <h2 class="searchTerm">Naturaleza</h2>
         <div class="searchSeparator"></div>
     </Section>
     <section class="galery">
@@ -63,8 +61,6 @@
         <div class="Con"><img src="images/pexels-pixabay-462162.jpg" class="imgGal" alt=""></div>
         
     </section>
-    
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="JS/mainGaleria.js"></script>
 </body>
 
