--- a/FrontEnd/indexMainMenu.html
+++ b/FrontEnd/indexMainMenu.html
@@ -3,18 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-<<<<<<< Updated upstream
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link rel="stylesheet" href="./css/styleMainMenu.css">
-=======
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styleMainMenu.css">
     <script src="https://kit.fontawesome.com/3b1ae9d2f5.js" crossorigin="anonymous"></script>
->>>>>>> Stashed changes
     <title>Concurso Fotografico</title>
 </head>
 
@@ -25,15 +16,10 @@
             <img src="images/LogoFotografia.png" alt="logo" class="img">
             <h2 class="name">Pixely</h2>
             <span class="mobMenu fas fa-bars" onclick="mobMenuShow()"></span>
-<<<<<<< Updated upstream
-            <ul class="topNav">
-                <span class="mobMenuClose fas fa-times" onclick="mobMenuClose()"></span>
-=======
            
             <ul class="topNav">
                 <span class="mobMenuClose fas fa-times" onclick="mobMenuClose()"></span>
                
->>>>>>> Stashed changes
                 <li class="topNavItem">
                     <a class="links" id="explora" href="FrontEnd/50Mejores/index.html">Explora</a>
                 </li>
@@ -52,12 +38,7 @@
                 </li>
             </ul>
         </Section>
-<<<<<<< Updated upstream
-
-        <div class="title" data-aos="zoom-in-right">
-=======
         <div class="title">
->>>>>>> Stashed changes
             <h1>Las Mejores Fotografias Tomandas Por Artistas Talentosos</h1>
         </div>
 
@@ -67,10 +48,6 @@
             <a href="#" class="buscar fas fa-search"></a>
         </div>
     </header>
-<<<<<<< Updated upstream
-    <!-- header -->
-    <!-- Barra tipo foto-->
-=======
 
     <div class="barra2">
         <span class="mobclose" onclick="closeMobileMenu()"></span>
@@ -83,11 +60,10 @@
 
 
     </div>
->>>>>>> Stashed changes
     <!-- about -->
     <section class="about-section">
         <div class="contenedor">
-            <p data-aos="zoom-in-down" class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
+            <p class="secondary-title quote-text ">Sube las mejores fotos de tu stock y compartelo a talentosos
                 creadores,</p>
             <div>
                 <a class="download-btn" href="IndexLogin.html"><i></i><span class="btn-label">INICIAR SECCION</span></a>
@@ -101,36 +77,7 @@
 
     </div>
     <!-- quote  -->
-<<<<<<< Updated upstream
-    <section class="quote-section">
-        <h2 data-aos="zoom-in" class="secondary-title quote-text2">Publicar Foto</h2>
-        <div class="contenedor">
-            <div class="input-contenedor">
-                <span class=" fa-4x">
-                    <i class="fas fa-photo-video"></i>
-                </span>
-                <p data-aos="fade-up"
-                data-aos-duration="1000" class=" publica-text">suba su foto de tu galeria aqui</p>
-                <input class="submit-btn download-btn " type="submit" value="Añade tu foto">
-                <br>
-            </div>
-
-            <div>
-                <form class="formulario ">
-                    <input class="forpub" placeholder="Titulo de la foto">
-                    <br>
-                    <br>
-                    <input class="forpub" placeholder="Descripción">
-                    <br>
-                    <br>
-                    <input class="forpub" placeholder="Categoria">
-                </form>
-            </div>
-        </div>
-    </section>
-=======
    
->>>>>>> Stashed changes
     <!-- quote  -->
 
 
@@ -151,8 +98,8 @@
     </footer>
     <!-- footer -->
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="JS/mainGaleria.js"></script>
+
+    <script src="./js/main.js"></script>
 
 </body>
 
