--- a/FrontEndRespaldo/IndexLogin.html
+++ b/FrontEndRespaldo/IndexLogin.html
@@ -31,9 +31,8 @@
          </div>
          <input class="button" type="submit" value="Login">
 
-         <p>Al registrarte, aceptas nuestras Condiciones de uso y Política de privacidad.</p>
+         <p>¿Se te olvido la contraseña? <a class="link" href="Indexregistro.html">Recuperar Contraseña </a></p>
          <p>¿No tienes una cuenta? <a class="link" href="Indexregistro.html">Registrate </a></p>
-         <p>Regresar <a class="link" href="indexMainMenu.html">Página Principal </a></p>
      </div>
     </form>
 
