--- a/FrontEndRespaldo/IndexLogin.html
+++ b/FrontEndRespaldo/IndexLogin.html
@@ -31,7 +31,7 @@
          </div>
          <input class="button" type="submit" value="Login">
 
-         <p>¿Se te olvido la contraseña? <a class="link" href="Indexregistro.html">Recuperar Contraseña </a></p>
+         <p>¿Se te olvido la contraseña? <a class="link" href="Indexrecuperar contraseña.html">Recuperar Contraseña </a></p>
          <p>¿No tienes una cuenta? <a class="link" href="Indexregistro.html">Registrate </a></p>
      </div>
     </form>
