--- a/FrontEndRespaldo/Index50Mejores.html
+++ b/FrontEndRespaldo/Index50Mejores.html
@@ -58,17 +58,20 @@
         <h2 class="searchTerm" data-aos="flip-left">Naturaleza</h2>
         <div class="searchSeparator"></div>
     </Section>
-    <section class="galery">
-        <div class="Con"><img src="images/pexels-francesca-zama-5339066.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images//pexels-paul-ijsendoorn-33041.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/pexels-photo-2347011.jpeg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/pexels-benjamin-suter-3617457.jpg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/woman-girl-eye-models-39819.jpeg" class="imgGal" alt=""></div>
-        <div class="Con"><img src="images/pexels-pixabay-462162.jpg" class="imgGal" alt=""></div>
-        
-    </section>
 
+    <section class="galeria">
+
+        <a href="#image1"><img src="images/pexels-francesca-zama-5339066.jpg"  alt=""></a>
+        <a href="#image2"><img src="images//pexels-paul-ijsendoorn-33041.jpg" class="img-galeria" alt=""></a>
+        <a href="#image2"><img src="images/pexels-photo-2347011.jpeg" class="img-galeria" alt=""></div>
+        <a href="#image2"><img src="images/pexels-benjamin-suter-3617457.jpg" class="img-galeria" alt=""></a>
+        <a href="#image2"><img src="images/woman-girl-eye-models-39819.jpeg" class="img-galeria" alt=""></a>
+        <a href="#image2"><img src="images/pexels-pixabay-462162.jpg" class="img-galeria" alt=""></a>
+
+    </section>
+    <article class="light-box" id="image1">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://kit.fontawesome.com/c15b744a04.js" crossorigin="anonymous"> </script>
     <script src="JS/main50Mejores.js"></script>
 </body>
 
