--- a/FrontEndRespaldo/IndexGaleria.html
+++ b/FrontEndRespaldo/IndexGaleria.html
@@ -20,10 +20,10 @@
             <ul class="topNav">
                 <span class="mobMenuClose fas fa-times" onclick="mobMenuClose()"></span>
                 <li class="topNavItem">
-                    <a class="links" id="explora" href="FrontEnd/50Mejores/index.html">Explora</a>
+                    <a class="links" id="explora" href="IndexGaleria.html">Explora</a>
                 </li>
                 <li class="topNavItem">
-                    <a class="links" id="favoritos" href="#">Favoritos</a>
+                    <a class="links" id="favoritos" href="Index50Mejores.html">Favoritos</a>
                 </li>
                 <li class="topNavItem">
                     <a class="links fas fa-bell" id="notifications" href="#"></a>
@@ -33,7 +33,7 @@
                     <img id="profilePic" src="images/pexels-tarzine-jackson-773371.jpg" alt="ProfilePic">
                 </li>
                 <li class="topNavItem">
-                    <a class="links fas fa-angle-down" id="moreOptions" href="#"></a>
+                    <a class="links fas fa-angle-down" id="moreOptions" href="IndexPerfil.html"></a>
                 </li>
             </ul>
         </Section>
