Barra de busqueda Galeria

--- a/FrontEndRespaldo/IndexGaleria.html
+++ b/FrontEndRespaldo/IndexGaleria.html
@@ -44,9 +44,9 @@
         </div>
 
         <div class="buscador">
-            <input class="inputBuscador" placeholder="Buscar Fotos o fotografos"></input>
+            <input class="inputBuscador" id="busca" placeholder="Buscar Fotos o fotografos"></input>
             <div class="separador"></div>
-            <a href="#" class="buscar fas fa-search"></a>
+            <a href="#" class="buscar fas fa-search" onclick="buscador()"></a>
         </div>
     </header>
     <Section class="search">
