--- a/FrontEndRespaldo/IndexPerfil.html
+++ b/FrontEndRespaldo/IndexPerfil.html
@@ -7,14 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="./CSS/stylePerfil.css">
-    <title>Pagina Wep</title>
+    <script src="https://kit.fontawesome.com/3b1ae9d2f5.js" crossorigin="anonymous"></script>
+    <title>Pagina Web</title> 
 </head>
 
 <body>
 
-    <!-- header -->
-<!-- header -->
+
 <header>
+    
     <Section class="top">
         <img src="images/LogoFotografia.png" alt="logo" class="img">
         <h2 class="name">Pixely</h2>
@@ -66,8 +67,8 @@
             <a  href="indexpublicarfoto.html" class="uploadImg fas fa-upload"></a>           
 
     </section>
-    <!-- about -->
-
+    <!-- UploadImg -->
+    <script src="/FrontEndRespaldo/JS/mainPerfil.js"></script>
 </body>
 
 </html>
