--- a/FrontEndRespaldo/IndexGaleria.html
+++ b/FrontEndRespaldo/IndexGaleria.html
@@ -77,7 +77,7 @@
         <a href="#image2"><img src="images/pexels-photo-2347011.jpeg" class="img-galeria" alt="" onclick="openDescription()">
         <a href="#image2"><img src="images/pexels-benjamin-suter-3617457.jpg" class="img-galeria" alt="" onclick="openDescription()"></a>
         <a href="#image2"><img src="images/woman-girl-eye-models-39819.jpeg" class="img-galeria" alt="" onclick="openDescription()"></a>
-        <a href="#image2"><img src="images/pexels-pixabay-462162.jpg" class="img-galeria" alt=""></a>
+        <a href="#image2"><img src="images/pexels-pixabay-462162.jpg" class="img-galeria" alt="" onclick="openDescription()"></a>
 
     </section>
 <article class="light-box" id="image1">
